# E-Pharmacy

e-pharmacy/: CMakeLists.txt  README.md  pom.xml
e-pharmacy/class diagrams/: analytics_and_reporting.puml  combined.puml  order_management.puml  prescription_management.puml  product_catalog.puml  user_management.puml
e-pharmacy/prescription_management/Prescription_Management_Starter_Code/: FileHandler.java  Medication.java  Prescription.java  PrescriptionManagement.java
e-pharmacy/prescription_management/java/main/: FileHandler.java  Medication.java  Prescription.java  PrescriptionManagement.java
e-pharmacy/product_catalog/: fileHandler.cpp  fileHandler.h  main.cpp  product.cpp  product.h  productManager.cpp  productManager.h  searchProduct.cpp  searchProduct.h
e-pharmacy/product_catalog/Orientation2023-E-Pharmacy starter code/: README.md
e-pharmacy/product_catalog/Orientation2023-E-Pharmacy starter code/C++/: FileHandler.cpp  Product.cpp  ProductManager.cpp  SearchProduct.cpp
e-pharmacy/product_catalog/Orientation2023-E-Pharmacy starter code/C++/data/: products.json
e-pharmacy/use cases/: diagram.puml
e-pharmacy/use cases/descriptions/product catalog/: add_a_product.puml  search_product.puml  update_catalog.puml
e-pharmacy/use cases/descriptions/user management/: account_creation.puml  login.puml  user_registration.puml
e-pharmacy/user_management/: auth.sh  user_authentication_starter.sh
